# ComputerAnimations

./: CMakeLists.txt  LICENSE  main.cpp
data/: scenario_1.txt  scenario_2.txt  scenario_4.txt
src/: CMakeLists.txt  Cool.cpp  Cool.h  Guy.h  Shy.cpp  Shy.h  SimpleObjHeader.h  main.cpp  simpleObjLoader.cpp
src/matrix/: InterpolationHelper.cpp  InterpolationHelper.h  MatrixGenerator.cpp  MatrixGenerator.h  QuaternionConverter.cpp  QuaternionConverter.h  RotationHelper.cpp  RotationHelper.h
src/setup/: Preferences.cpp  Preferences.h  SetupFileLoader.cpp  SetupFileLoader.h  SimpleObjLoader.cpp  SimpleObjLoader.h
src/shaders/: FragmentShader.txt  VertexShader.txt
src/ui/: StringUtils.cpp  StringUtils.h  UserInputManager.cpp  UserInputManager.h
ui/: CMakeLists.txt  UserInterfaceManager.cpp  UserInterfaceManager.h
utils/: CMakeLists.txt  MatrixGenerator.cpp  MatrixGenerator.h  SimpleObjLoader.cpp  SimpleObjLoader.h  UserInputManager.cpp  UserInterfaceManager.cpp  UserInterfaceManager.h
